force-app/main/default/objects/Lead/fields/Centre__c.field-meta.xml
<CustomField>
    <fullName>Centre__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Centre</label>
    <referenceTo>Centre__c</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>