force-app/main/default/objects/Lead/fields/Existing_Student__c.field-meta.xml
<CustomField>
    <fullName>Existing_Student__c</fullName>
    <label>Existing Student?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>YES</fullName>
            </value>
            <value>
                <fullName>NO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>