force-app/main/default/objects/Lead/fields/Lead_Medium__c.field-meta.xml
<CustomField>
    <fullName>Lead_Medium__c</fullName>
    <label>Web to Lead Medium</label>
    <length>255</length>
    <type>Text</type>
</CustomField>