force-app/main/default/objects/Lead/fields/Lead_Mode__c.field-meta.xml
<CustomField>
    <fullName>Lead_Mode__c</fullName>
    <label>Web to Lead Mode</label>
    <length>80</length>
    <type>Text</type>
</CustomField>