force-app/main/default/objects/Lead/fields/Lead_Source1__c.field-meta.xml
<CustomField>
    <fullName>Lead_Source1__c</fullName>
    <label>Web to Lead Source</label>
    <length>80</length>
    <type>Text</type>
</CustomField>