force-app/main/default/objects/Lead/fields/Web_To_Lead_Centre__c.field-meta.xml
<CustomField>
    <fullName>Web_To_Lead_Centre__c</fullName>
    <label>Web To Lead Centre</label>
    <length>255</length>
    <type>Text</type>
</CustomField>