force-app/main/default/objects/Lead/recordTypes/Lead_Layout.recordType-meta.xml
<RecordType>
    <fullName>Lead_Layout</fullName>
    <active>true</active>
    <businessProcess>Lead Layout</businessProcess>
    <label>Lead Layout</label>
</RecordType>